<resources>
    <string name="app_name">Pillpal</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_1_month">1 Month</string>
    <string name="lbl_p_llpal">P  llPal</string>
    <string name="lbl_tue">Tue</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_250_mg">250 mg</string>
    <string name="lbl_20">20</string>
    <string name="lbl_p">P</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="msg_check_reaction">Check reaction between two or more drugs that can affect how the drugs work.</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_28">28</string>
    <string name="msg_check_interacti">Check Interactions</string>
    <string name="msg_check_new_pair">Check New Pair</string>
    <string name="lbl_moderate">MODERATE</string>
    <string name="lbl_userLName">Filly</string>
    <string name="lbl_description">DESCRIPTION</string>
    <string name="msg_warning_if_no">WARNING: If no interactions are found between two drugs, it does not necessarily mean that no interactions exist. Always CONSULT with a HEALTHCARE PROFESSIONAL.</string>
    <string name="msg_community_guide">Community Guidelines</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lbl_severity">SEVERITY</string>
    <string name="msg_daily_for_1_mon">Daily for 1 Month</string>
    <string name="lbl_set_reminder">Set Reminder</string>
    <string name="lbl_hi_i_m_pillpal">Hi, I\u2019m PillPal </string>
    <string name="msg_remember_to_tak">Remember to take medications as prescribed.</string>
    <string name="lbl_medicine_name">Medicine Name</string>
    <string name="lbl_sound">Sound</string>
    <string name="lbl_warning">WARNING: </string>
    <string name="msg_if_no_interacti">If no interactions are found between two drugs, it does not necessarily mean that no interactions exist. Always </string>
    <string name="lbl_llpal">  llPal</string>
    <string name="lbl_sat">Sat</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="msg_allow_notificat">Allow Notification</string>
    <string name="lbl_18">18</string>
    <string name="msg_drug_drug_inter">Drug-drug interaction</string>
    <string name="lbl_19">19</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="msg_don_t_forget_to">Don\u2019t forget to  take your pills!</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl">.</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_time_schedule">Time &amp; Schedule</string>
    <string name="msg_probiotics_250">Probiotics, 250mg</string>
    <string name="lbl_allow_banner">Allow Banner</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="lbl_nothing_here">Nothing Here</string>
    <string name="lbl_09_00_am">09:00 AM</string>
    <string name="lbl_consult">CONSULT</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_userFName">Ibs</string>
    <string name="msg_extended_descri">EXTENDED DESCRIPTION</string>
    <string name="msg_medication_remi">Medication Reminder</string>
    <string name="lbl_probiotics">Probiotics</string>
    <string name="lbl_hi_charles">Hi, Charles</string>
    <string name="lbl_september_2023">September 2023 </string>
    <string name="lbl_warfarin">Warfarin</string>
    <string name="lbl_08_30_pm">08:30 PM</string>
    <string name="lbl_notification">Notification</string>
    <string name="msg_terms_of_servic">Terms of Service</string>
    <string name="lbl_medicine_type">Medicine Type</string>
    <string name="lbl_vibration">Vibration</string>
    <string name="lbl_add_two_drugs">Add two drugs:</string>
    <string name="lbl_added_two_drugs">Two drugs added</string>
    <string name="lbl_hi_ibs">Hi, Ibs</string>
    <string name="lbl_load_example">Load example</string>
    <string name="msg_track_your_drug">Track your drug interaction and medication reminder information</string>
    <string name="lbl_fri">Fri</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_dosage">Dosage</string>
    <string name="lbl_to_take">To Take</string>
    <string name="lbl_mon">Mon</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_with_a"> with a </string>
    <string name="msg_healthcare_prof">HEALTHCARE PROFESSIONAL</string>
    <string name="msg_add_drug_to_che">ADD DRUG TO CHECK FOR INTERACTIONS</string>
    <string name="msg_acetaminophen">Acetaminophen [Tylenol]</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="privacy_policy_info">We value your privacy and are committed to protecting your health information. We collect, use, and share your information to provide you with our medication reminder service, improve our app, and comply with applicable laws. We protect your information with industry-standard security measures. You have control over your information and can access, update, delete, or opt out of sharing it at any time.</string>
    <string name="terms_of_service_info">Please read these Terms of Service carefully before using the Medication Reminder App. By using the App, you agree to be bound by these Terms of Service. If you do not agree to these Terms of Service, you may not use the App. The App is provided for informational purposes only and is not intended to be a substitute for medical advice. You should always consult with your doctor before making any decisions about your medication regimen. The App does not guarantee that you will take your medications on time or that your medications will be effective. You are responsible for taking your medications as prescribed by your doctor. We may collect and use information about your use of the App, including your medication history, medication dosages, and medication reminders. We may use this information to improve the App and to provide you with more personalized services. We may also share this information with third parties who help us provide the App. We take the security of your information seriously and we use industry-standard security measures to protect it. However, we cannot guarantee that your information will be secure. You are responsible for protecting your own account information and for using the App in a safe and responsible manner. These Terms of Service may be changed at any time without notice. The most recent version of these Terms of Service will be posted on the App. You agree to review these Terms of Service periodically and to be bound by the most recent version. If you have any questions about these Terms of Service, please contact us at [email protected]</string>
    <string name="commGuideInfo">Welcome to the PillPal Community! We are a group of individuals who are committed to helping each other stay informed about potential drug-to-drug interactions. We believe that everyone should have the knowledge and support they need to make informed decisions about their medication regimen.</string>
    <string name="supportInfo">If you have any questions or concerns about PillPal, please feel free to contact our support team. We are available 24/7 to assist you. You can contact us via email at pillpal@email.com. We are here to help you make informed decisions about your medication regimen and stay safe and healthy. In addition to our support team, we also have a comprehensive FAQ section on our website that may answer your questions. You can also find helpful information and resources on our community forum. We are committed to providing you with the best possible support experience. If you have any suggestions or feedback, please feel free to share them with us.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_a">President Joe Biden has laid out plans to vaccinate 70% of US adults by 4 July and roll out the shots for 12- to 15-year-olds as soon as possible. Mr Bidens new goal includes having 160 million adults fully vaccinated by Independence Day. The target is well within reach as 105 million have already had the required jabs, and the US is vaccinating nearly a million adults per day. But the vaccination rate is half of what it was just three weeks ago. Mr Biden said his administration was working to win over "doubters" about the shots. Israel - a world leader in vaccination rates - has nearly fully reopened its economy and seen its number of new coronavirus cases crash to almost zero, with just over 60% of the population having received at least one shot. Israel may be close to herd immunity to Covid Herd immunity happens when enough of a population has protection against an infection that it stops being able to spread - and even people who don\'t themselves have immunity are indirectly protected. For Covid the estimated threshold for herd immunity is at least 65%-70% of people having protection against infection, although Mr Biden\'s chief medical adviser Dr Anthony Fauci has increased his estimate to 90% and the World Health Organization (WHO) has said the level is not known. </string>
</resources>