<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    style="@style/groupStylepurple_50">


    <LinearLayout
        android:id="@+id/linearColumnlanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="28.89dp"
        android:layout_marginTop="10.43dp"
        android:layout_marginEnd="22.89dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <FrameLayout android:id="@+id/__link_drug_interaction_empty__pillpal_logo"
                android:layout_height="30dp"
                android:layout_width="56dp"
                android:background="@drawable/pillpal_logo">
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout android:id="@+id/frameProfilepicture"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_125pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="@dimen/_125pxh">
            <FrameLayout android:background="@color/purple_100"
                android:id="@+id/frameGroupFiftySix"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <ImageView android:id="@+id/imageEllipseEight"
                android:layout_gravity="center"
                android:layout_height="@dimen/_102pxh"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_102pxh"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" android:src="@drawable/img_ellipse8"/>
        </FrameLayout>


        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowyung"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearName"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.62"
                android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYung"
                    style="@style/txtPoppinsbold40_1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_yung"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFilly"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtRobotoromanlight40"
                    android:text="@string/lbl_filly"/>
            </LinearLayout>
            <View android:background="@color/black_900"
                android:id="@+id/lineVectorNine"
                android:layout_height="@dimen/_85pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.1" android:layout_width="0dp"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearAge"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_weight="0.37"
                android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAge"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtPoppinsbold40_1"
                    android:text="@string/lbl_age"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwentyEight"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtRobotoromanlight40"
                    android:text="@string/lbl_28"/>
            </LinearLayout>
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/etNotification"
                    style="@style/etSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:background="@drawable/rectangle_bg_purple_100_radius_15"
                    android:drawableStart="@drawable/img_notification_bluegray_900"
                    android:drawablePadding="@dimen/_14pxh"
                    android:ellipsize="end"
                    android:hint="@string/lbl_notification"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_10pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900" />

                <Button
                    android:background="@drawable/rectangle_bg_purple_100_radius_15"
                    android:drawablePadding="@dimen/_14pxh"
                    android:drawableStart="@drawable/img_search"
                    android:ellipsize="end"
                    android:hint="@string/lbl_privacy_policy"
                    android:id="@+id/searchViewPrivacypolicy"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900"
                    style="@style/etSolidRounded"/>
                <Button
                    android:background="@drawable/rectangle_bg_purple_100_radius_15"
                    android:drawablePadding="@dimen/_14pxh"
                    android:drawableStart="@drawable/img_clip_path_group"
                    android:ellipsize="end"
                    android:hint="@string/msg_terms_of_servic"
                    android:id="@+id/etTermsofservic"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900"
                    style="@style/etSolidRounded"/>
                <Button
                    android:background="@drawable/rectangle_bg_purple_100_radius_15"
                    android:drawablePadding="@dimen/_14pxh"
                    android:drawableStart="@drawable/img_file"
                    android:ellipsize="end"
                    android:hint="@string/msg_community_guide"
                    android:id="@+id/btn4"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900"
                    style="@style/etSolidRounded"/>
                <Button
                    android:background="@drawable/rectangle_bg_purple_100_radius_15"
                    android:drawablePadding="@dimen/_14pxh"
                    android:drawableStart="@drawable/img_question"
                    android:ellipsize="end"
                    android:hint="@string/lbl_support"
                    android:id="@+id/btn5"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900"
                    style="@style/etSolidRounded"/>
                <Button
                    android:background="@drawable/rectangle_bg_purple_100_radius_15"
                    android:drawablePadding="@dimen/_14pxh"
                    android:drawableStart="@drawable/img_clock"
                    android:ellipsize="end"
                    android:hint="@string/lbl_sign_out"
                    android:id="@+id/btn6"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</LinearLayout>